--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,8 +30,9 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
+          distribution: goreleaser
           version: latest
-          args: release --clean
+          args: release --clean ${{ env.flags }}
         env:
-          DOCKER_CLI_EXPERIMENTAL: enabled
+          # DOCKER_CLI_EXPERIMENTAL: enabled
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
